--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
+* {
+  box-sizing: border-box;
+}
+
+input, textarea {
+  font-size: 16px;
+  /* width: 100%; */
+  border-radius: 4px;
+  border: 1px solid rgba(0,0,255,0.4);
+  padding: 10px;
+}
+
+button {
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid rgba(0,0,255,0.4);
+  min-width: 100px;
+  background: linear-gradient(rgba(0,0,255,0.4), rgba(0,0,255,0.8));
+}
+
 .App {
-  text-align: center;
+  margin: auto;
+  padding: 25px;
+  max-width: 1200px;
 }
 
 .App-logo {
